# top-down-maze-procedural

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  copilot.md  mainfest.json
src/: CMakeLists.txt  Engine.cpp  Engine.hpp  EventHandler.cpp  EventHandler.hpp  SystemStore.hpp  main.cpp
src/Audio/: EffectsItem.cpp  EffectsItem.hpp  MusicItem.cpp  MusicItem.hpp  SoundBank.cpp  SoundBank.hpp
src/Components/: AbsoluteAlpha.hpp  AbsoluteOffset.hpp  AbsoluteRotation.hpp  AltarMultiBlock.hpp  AltarSacrifice.hpp  AltarSegment.hpp  Armable.hpp  Armed.hpp  Base.cpp  Base.hpp  CorruptionCell.hpp  CryptChest.hpp  CryptDoor.hpp  CryptInteriorMultiBlock.hpp  CryptInteriorSegment.hpp  CryptKey.hpp  CryptLever.hpp  CryptObjectiveMultiBlock.hpp  CryptPassageBlock.hpp  CryptPassageDoor.hpp  CryptPassageSpikeTrap.hpp  CryptRoom.hpp  CryptRoomClosed.hpp  CryptRoomEnd.hpp  CryptRoomLavaPit.hpp  CryptRoomOpen.hpp  CryptRoomStart.hpp  CryptSegment.hpp  DeathPosition.hpp  DestroyedObstacle.hpp  Destructable.hpp  Direction.hpp  Door.hpp  EnttDistanceMap.hpp  Exit.hpp  ExitKey.hpp  Font.cpp  Font.hpp  FootStepAlpha.hpp  GraveMultiBlock.hpp  (+49 more)
src/Components/Altar/: AltarMultiBlock.hpp  AltarSegment.hpp
src/Components/Crypt/: CryptEntrance.hpp  CryptExit.hpp  CryptInteriorSegment.hpp  CryptMultiBlock.hpp  CryptObjectiveSegment.hpp  CryptPassageBlock.hpp  CryptPassageDoor.hpp  CryptRoomBase.hpp  CryptRoomClosed.hpp  CryptRoomEnd.hpp  CryptRoomLavaPitCell.hpp  CryptRoomLavaPitCellEffect.hpp  CryptRoomOpen.hpp  CryptRoomStart.hpp  CryptSegment.hpp
src/Components/Grave/: GraveSegment.hpp
src/Components/Hazard/: CorruptionCell.hpp  HazardFieldCell.hpp  SinkholeCell.hpp
src/Components/HolyWell/: HolyWellEntrance.hpp  HolyWellExit.hpp  HolyWellMultiBlock.hpp  HolyWellSegment.hpp
src/Components/Inventory/: CarryItem.hpp  Explosive.hpp  FlashUICadaver.hpp  FlashUIInventory.hpp  FlashUIRadius.hpp  FlashUIWealth.hpp  InventoryItem.hpp  InventoryWearLevel.hpp  ScryingBall.hpp
src/Components/Npc/: Npc.hpp  NpcContainer.hpp  NpcFriendly.hpp  NpcLerpSpeed.hpp  NpcNoPathFinding.hpp  NpcPathTrajectory.hpp  NpcScanBounds.hpp
src/Components/Particle/: Flame.cpp  Flame.hpp  (+10 more)
src/Debug/: AssertHandler.cpp  AssertHandler.hpp
src/Events/: AnimDirectionChangeEvent.hpp  AnimResetFrameEvent.hpp  BuyShopItemEvent.hpp  CryptRoomEvent.hpp  DropInventoryEvent.hpp  LightningEvent.hpp  LoadSettingsEvent.hpp  LootContainerDestroyedEvent.hpp  NpcCreationEvent.hpp  ParticleEvents.hpp  PauseClocksEvent.hpp  PlayerActionEvent.hpp  PlayerMortalityEvent.hpp  ProcessGameoverSceneInputEvent.hpp  ProcessGraveyardSceneInputEvent.hpp  ProcessLevelCompleteSceneInputEvent.hpp  ProcessPausedMenuSceneInputEvent copy.hpp  ProcessSettingsMenuSceneInputEvent.hpp  ProcessTitleSceneInputEvent.hpp  ResumeClocksEvent.hpp  SaveSettingsEvent.hpp  SceneManagerEvent.hpp  UnlockDoorEvent.hpp
src/Factory/: AltarFactory.cpp  AltarFactory.hpp  BombFactory.cpp  BombFactory.hpp  CryptFactory.cpp  CryptFactory.hpp  Factory.hpp  FloormapFactory.hpp  LootFactory.cpp  LootFactory.hpp  MultiblockFactory.cpp  MultiblockFactory.hpp  NpcFactory.cpp  NpcFactory.hpp  ObstacleFactory.cpp  ObstacleFactory.hpp  ParticleFactory.hpp  PlantFactory.cpp  PlantFactory.hpp  PlayerFactory.cpp  PlayerFactory.hpp  RuinFactory.cpp  RuinFactory.hpp  ShaderFactory.cpp  ShaderFactory.hpp  WallFactory.cpp  WallFactory.hpp
src/Logging/: BasicLogController.hpp
src/PathFinding/: AStar.cpp  AStar.hpp  SmartPointers.hpp  SpatialHashGrid.cpp  SpatialHashGrid.hpp
src/Scene/: CryptScene.cpp  CryptScene.hpp  GameOverScene.cpp  GameOverScene.hpp  GraveyardScene.cpp  GraveyardScene.hpp  IScene.hpp  LevelCompleteScene.cpp  LevelCompleteScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  PausedMenuScene.cpp  PausedMenuScene.hpp  SceneManager.cpp  SceneManager.hpp  SceneStack.hpp  SettingsMenuScene.cpp  SettingsMenuScene.hpp  TitleScene.cpp  TitleScene.hpp
src/SceneControl/: ComponentTransfer.hpp  IScene.hpp  RegistryTransfer.cpp  RegistryTransfer.hpp  Scene.hpp  SceneConfig.cpp  SceneConfig.hpp  SceneData.cpp  SceneData.hpp  SceneInputRouter.cpp  SceneInputRouter.hpp  SceneManager.cpp  SceneManager.hpp  SceneMap.cpp  SceneMap.hpp  SceneStack.hpp
src/Shaders/: BackgroundShader.hpp  BaseFragmentShader.cpp  BaseFragmentShader.hpp  BaseShader.cpp  BaseShader.hpp  BaseShaderSprite.cpp  BaseShaderSprite.hpp  DarkModeShader.cpp  DarkModeShader.hpp  DrippingBloodShader.cpp  DrippingBloodShader.hpp  FloodWaterShader.cpp  FloodWaterShader.hpp  IShaderSprite.hpp  MistShader.cpp  MistShader.hpp  NightStaticShader.cpp  NightStaticShader.hpp  PulsingShader.cpp  PulsingShader.hpp  TitleScreenShader.cpp  TitleScreenShader.hpp  UniformBuilder.hpp  ViewFragmentShader.hpp
src/Sprites/: BackgroundShader.hpp  BaseFragmentShader.cpp  BaseFragmentShader.hpp  BasicSprite.hpp  CircleSegment.cpp  CircleSegment.hpp  FloodWaterShader.hpp  MultiSprite.cpp  MultiSprite.hpp  Shockwave.cpp  Shockwave.hpp  SpriteFactory.cpp  SpriteFactory.hpp  SpriteMetaType.hpp  TileMap.cpp  TileMap.hpp  TitleScreenShader.hpp  ViewFragmentShader.hpp
src/Systems/: AltarSystem.cpp  AltarSystem.hpp  AnimSystem.cpp  AnimSystem.hpp  BaseSystem.cpp  BaseSystem.hpp  BombSystem.cpp  CollisionSystem.cpp  CollisionSystem.hpp  CryptSystem.cpp  CryptSystem.hpp  DiggingSystem.cpp  DiggingSystem.hpp  ExitSystem.cpp  ExitSystem.hpp  FloodSystem.cpp  FootstepSystem.cpp  FootstepSystem.hpp  GraveSystem.cpp  GraveSystem.hpp  HazardFieldSystem.cpp  HolyWellSystem.cpp  HolyWellSystem.hpp  ItemSystem.cpp  ItemSystem.hpp  LargeObstacleSystem.cpp  LargeObstacleSystem.hpp  LootSystem.cpp  LootSystem.hpp  MusicSystem.cpp  MusicSystem.hpp  NpcSystem.cpp  ParticleSystem.cpp  ParticleSystem.hpp  PassageSystem.cpp  PassageSystem.hpp  PathFindSystem.cpp  PathFindSystem.hpp  PathSystem.cpp  PathSystem.hpp  (+24 more)
src/Utils/: Collision.hpp  Constants.hpp  Maths.cpp  Maths.hpp  Npc.cpp  Npc.hpp  Optimizations.hpp  Player.cpp  Player.hpp  Random.hpp  Utils.cpp  Utils.hpp
src/components/: base.cpp  random.cpp
src/systems/: base_system.cpp
(+525 files in other folders)
